--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <!-- Slide 3 -->
                 <div class="hero-slide active absolute inset-0 w-full h-full bg-cover bg-center bg-no-repeat transition-opacity duration-1000 ease-in-out" style="background-image: url('https://i.ibb.co/yFrRtg6s/entry.jpg');"></div>
                 <!-- Slide 4 -->
-                <div class="hero-slide absolute inset-0 w-full h-full bg-cover bg-center bg-no-repeat transition-opacity duration-1000 ease-in-out" style="background-image: url('https://i.ibb.co/VY3t8pPc/mandap-chori.jpg');"></div>
+                <!-- <div class="hero-slide absolute inset-0 w-full h-full bg-cover bg-center bg-no-repeat transition-opacity duration-1000 ease-in-out" style="background-image: url('https://i.ibb.co/VY3t8pPc/mandap-chori.jpg');"></div> -->
             </div>
             
             <!-- Carousel Indicators -->
