--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <button class="hero-indicator w-3 h-3 rounded-full bg-white/50 hover:bg-white transition-all duration-300 active" data-slide="0"></button>
                 <button class="hero-indicator w-3 h-3 rounded-full bg-white/50 hover:bg-white transition-all duration-300" data-slide="1"></button>
                 <button class="hero-indicator w-3 h-3 rounded-full bg-white/50 hover:bg-white transition-all duration-300" data-slide="2"></button>
-                <button class="hero-indicator w-3 h-3 rounded-full bg-white/50 hover:bg-white transition-all duration-300" data-slide="3"></button>
+                <!-- <button class="hero-indicator w-3 h-3 rounded-full bg-white/50 hover:bg-white transition-all duration-300" data-slide="3"></button> -->
             </div>
             
             <!-- Carousel Navigation Arrows -->
