--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container mx-auto px-4 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-2">
-                    <i class="fas fa-magic text-3xl bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"></i>
+                    <!-- <i class="fas fa-magic text-3xl bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent"></i> -->
                     <span class="text-2xl font-bold font-playfair bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent">અંબિકા લાઇટિંગ</span>
                 </div>
                 
