--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       "description": "Premium wedding mandap decoration, reception stage setup, garba event lighting, and DJ services in Unjha, Gujarat",
       "image": "https://i.ibb.co/yFrRtg6s/entry.jpg",
       "url": "https://www.ambikalighting.com",
-      "telephone": ["+919408061619", "+919426343056"],
+      "telephone": ["+919825998835", "+919426343056"],
       "email": "meshv1444@gmail.com",
       "address": {
         "@type": "PostalAddress",
@@ -630,7 +630,7 @@
                             <div>
                                 <h3 class="text-xl font-bold text-gray-800 mb-2">ફોન</h3>
                                 <div class="space-y-2">
-                                    <a href="tel:+919408061619" class="block text-gray-600 hover:text-purple-600 transition-colors text-lg">
+                                    <a href="tel:+919825998835" class="block text-gray-600 hover:text-purple-600 transition-colors text-lg">
                                         +91 94080 61619
                                     </a>
                                     <a href="tel:+919426343056" class="block text-gray-600 hover:text-purple-600 transition-colors text-lg">
@@ -797,12 +797,12 @@
                     <ul class="space-y-3">
                         <li class="flex items-start space-x-3">
                             <i class="fas fa-map-marker-alt text-purple-400 mt-1"></i>
-                            <span class="text-gray-300 text-sm">H-11, Noble HeightsC 203, Bharat Nagar, Unjha, Gujarat 384170</span>
+                            <span class="text-gray-300 text-sm">H-11, Noble Heights, Bharat Nagar, Unjha, Gujarat 384170</span>
                         </li>
                         <li class="flex items-center space-x-3">
                             <i class="fas fa-phone text-purple-400"></i>
                             <div class="flex flex-col">
-                                <a href="tel:+919408061619" class="text-gray-300 hover:text-white transition-colors text-sm">+91 94080 61619</a>
+                                <a href="tel:+919825998835" class="text-gray-300 hover:text-white transition-colors text-sm">+91 94080 61619</a>
                                 <a href="tel:+919426343056" class="text-gray-300 hover:text-white transition-colors text-sm">+91 94263 43056</a>
                             </div>
                         </li>
