--- a/index.html
+++ b/index.html
@@ -806,10 +806,10 @@
                                 <a href="tel:+919426343056" class="text-gray-300 hover:text-white transition-colors text-sm">+91 94263 43056</a>
                             </div>
                         </li>
-                        <li class="flex items-center space-x-3">
+                        <!-- <li class="flex items-center space-x-3">
                             <i class="fas fa-envelope text-purple-400"></i>
                             <a href="mailto:meshv1444@gmail.com" class="text-gray-300 hover:text-white transition-colors text-sm">meshv1444@gmail.com</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
