--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ambika Lighting - Best Wedding Mandap & Decoration Services in Unjha, Gujarat | અંબિકા લાઇટિંગ</title>
-    <meta name="description" content="Ambika Lighting offers premium wedding mandap decoration, reception stage setup, garba event lighting, and DJ services in Unjha, Gujarat. 20+ years experience, 500+ events completed. Call +91 94080 61619">
+    <meta name="description" content="Ambika Lighting offers premium wedding mandap decoration, reception stage setup, garba event lighting, and DJ services in Unjha, Gujarat. 20+ years experience, 500+ events completed. Call +91 98259 98835">
     <meta name="keywords" content="wedding decoration unjha, mandap decoration gujarat, ambika lighting, reception decoration, garba event decoration, mehrauli gujarat, party decoration, stage decoration, flower decoration, gate decoration, lighting services unjha, dj services gujarat, wedding planner unjha, event management gujarat">
     <meta name="author" content="Ambika Lighting">
     <meta name="robots" content="index, follow">
@@ -631,7 +631,7 @@
                                 <h3 class="text-xl font-bold text-gray-800 mb-2">ફોન</h3>
                                 <div class="space-y-2">
                                     <a href="tel:+919825998835" class="block text-gray-600 hover:text-purple-600 transition-colors text-lg">
-                                        +91 94080 61619
+                                        +91 98259 98835
                                     </a>
                                     <a href="tel:+919426343056" class="block text-gray-600 hover:text-purple-600 transition-colors text-lg">
                                         +91 94263 43056
@@ -646,9 +646,9 @@
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold text-gray-800 mb-2">ઇમેઇલ</h3>
-                                <a href="mailto:meshv1444@gmail.com" class="text-gray-600 hover:text-purple-600 transition-colors">
+                                <!-- <a href="mailto:meshv1444@gmail.com" class="text-gray-600 hover:text-purple-600 transition-colors">
                                     meshv1444@gmail.com
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     </div>
