--- a/index.html
+++ b/index.html
@@ -640,17 +640,17 @@
                             </div>
                         </div>
                         
-                        <div class="flex items-start space-x-4">
+                        <!-- <div class="flex items-start space-x-4">
                             <div class="w-14 h-14 bg-gradient-to-br from-purple-500 to-pink-500 rounded-full flex items-center justify-center flex-shrink-0">
                                 <i class="fas fa-envelope text-white text-xl"></i>
                             </div>
                             <div>
                                 <h3 class="text-xl font-bold text-gray-800 mb-2">ઇમેઇલ</h3>
-                                <!-- <a href="mailto:meshv1444@gmail.com" class="text-gray-600 hover:text-purple-600 transition-colors">
+                                <a href="mailto:meshv1444@gmail.com" class="text-gray-600 hover:text-purple-600 transition-colors">
                                     meshv1444@gmail.com
-                                </a> -->
+                                </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     
                     <!-- WhatsApp Button -->
