--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="revisit-after" content="7 days">
     <meta name="distribution" content="global">
     <meta name="rating" content="general">
+    <meta name="google-site-verification" content="RHAsjPlGyl4BwRK4LNHcs2ooPqVJJj8gX1kiQyCp-0Q" />
     <link rel="canonical" href="https://www.ambikalighting.com/">
 
     <!-- Open Graph Meta Tags for Social Media -->
